--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
 // COLOURS
 
-$color-primary: #2EBD59;
+$color-primary: #51FFB7;
 $color-secondary: #6CCAE0;
 $color-tertiary: #07778E;
 
@@ -32,7 +32,7 @@ $ease-out-back: cubic-bezier(.64,-0.14,0, 2);
 
 // FONTS
 
-$font-header: Oswald, sans-serif;
+$font-header: 'Montserrat', sans-serif;;
 $font-body: Roboto, sans-serif;
 
 $font-weight-light: 300;
