--- a/resources/assets/sass/forms/_forms.scss
+++ b/resources/assets/sass/forms/_forms.scss
@@ -1,9 +1,9 @@
 @import "forms-text-fields";
 @import "forms-buttons";
 //@import "forms-checkboxes";
-@import "forms-dropdowns";
+//@import "forms-dropdowns";
 @import "forms-radio-buttons";
-@import "forms-file";
+//@import "forms-file";
 
 /*********************
 FORM STYLES
