--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,7 @@
 @import "mixins";
 @import "normalize";
 @import "utils";
+@import "layout";
 @import "type";
 @import "grid";
 @import "forms/forms";
