--- a/resources/assets/sass/forms/_forms-buttons.scss
+++ b/resources/assets/sass/forms/_forms-buttons.scss
@@ -20,6 +20,7 @@ input[type="button"],
 button{
   background: $color-primary;
   border-radius: 40px;
+  color: $grey2;
   display: flex;
   align-items: center;
   flex-grow: 0;
