--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
 @import "variables";
 @import "mixins";
 @import "normalize";
+@import "transitions";
 @import "utils";
 @import "layout";
 @import "type";
