Follow artist, add to mailing list

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -2,3 +2,9 @@
     background: $grey2;
     color: $white;
 }
+
+.masthead{
+    padding: 0 0 80px;
+    margin-bottom: $padding;
+    border-bottom: 1px solid $grey7;
+}
